<resources>
    <string name="app_name">Bavanier</string>
    <string name="message_tag_detected">Prečítaná karta</string>
    <string name="credit_deposit_error">Zadaná neplatná hodnota, skúste znova!</string>
    <string name="deposit_hint_message">Vklad</string>
    <string name="card_hint_message">Číslo karty:</string>
    <string name="credit_hint_message">Výška kreditu:</string>
    <string name="save_customer">Uložiť zákazníka</string>
    <string name="putCard">Priložte kartu</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="add_credit">Dobiť kredit</string>
    <string name="logout">Odhlásiť sa</string>
    <string name="onlogout">Boli ste odhlásený</string>
    <string name="onbuy">Položka bola zakúpená</string>
    <string name="onedit">Položka bola upravená</string>
    <string name="ondelete">Položka bola vymazaná</string>
    <string name="onadd">Položka bola pridaná</string>
    <string name="onrecharge">Kredit bol dobitý</string>

    <string name="logout_confirm">Odhlásiť sa?</string>
    <string name="delete_confirm">Vymazať položku?</string>
    <string name="yes">Áno</string>
    <string name="no">Nie</string>

    <string name="menu_buy_dialog_title">Kúpiť</string>
    <string name="menu_add_dialog_title">Pridať menu</string>
    <string name="menu_edit_dialog_title">Upraviť menu</string>
    <string name="menu_name">Názov</string>
    <string name="menu_price">Cena</string>
    <string name="cancel_button">Zrušiť</string>
    <string name="save_button">Uložiť</string>
    <string name="buy_button">Kúpiť</string>
    <string name="recharge_button">Dobiť</string>
    <string name="nfc_card_description">nfc_card</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customers">Zákazníci</string>
    <string name="credit_add_dialog_title">Dobiť kredit</string>
    <string name="cerdit_value">Suma</string>
</resources>
