<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:scaleType="center"
            android:background="#ffffff"
            android:elevation="1dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_buy_dialog_title"
            android:textSize="20dp"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="20dp"
            android:elevation="1dp"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/menu_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/menu_name"  />

    <TextView
        android:id="@+id/menu_price_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/menu_price"/>

</LinearLayout>
