<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.example.demeterovci.androidnfc.CustomerAddActivity">

    <TextView
        android:id="@+id/card_number_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:hint="@string/card_hint_message"/>

    <TextView
        android:id="@+id/card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_number_hint"
        android:layout_marginLeft="4dp"
        android:textSize="18sp"
        />
    <EditText
        android:id="@+id/deposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_number"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/deposit_hint_message"
        android:inputType="numberDecimal|numberSigned"/>

<Button
    android:id="@+id/btn_write"
    style="@style/Widget.AppCompat.Button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/deposit"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:onClick="saveCustomer"
    android:text="@string/save_customer"/>

</RelativeLayout>
